# ember-benchmark

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: ADAPTERS.md  BENCHMARK_MATRIX.md  BENCHMARK_TRACKER.md  MULTI_BENCHMARK_TESTING_PLAN.md  SCORING.md
docs/BenchmarkValidity/: BENCHMARK_CREDIBILITY.md  BENCHMARK_PLAN.md  BENCHMARK_RESEARCH_BRIEF.md
ember/: __init__.py  adapter.py  cli.py  data.py  scoring.py  timeline.py  types.py
ember/adapters/: __init__.py  ai_companions.py  eidolon_agent_memory.py  eidolon_mcp.py  mnemosyne.py
ember/datasets/: golden_facts.json  retrieval_queries.json
ember/tiers/: __init__.py  tier1_extraction.py  tier2_retrieval.py  tier2b_recency.py  tier3_roundtrip.py
scripts/: README.md  analyze_dataset_themes.py  analyze_on_server.py
