[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "ember-benchmark"
version = "0.1.0"
description = "EMBER: Emotionally-aware Memory Benchmark for Empathic Recall"
readme = "README.md"
license = {text = "CC-BY-4.0"}
requires-python = ">=3.11"
authors = [
    { name = "AI Companions Team" },
]
keywords = ["benchmark", "memory", "companion-ai", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27",     # MCP client + HTTP adapters
    "rich>=13.0",      # CLI output formatting
    "pydantic>=2.0",   # Data validation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]
# Install adapter-specific deps only when needed
ai-companions = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
]
eidolon = [
    "httpx>=0.27",
]

[project.scripts]
ember = "ember.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ember"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "llm_eval: requires LLM API calls (may be slow/costly)",
    "tier1: extraction quality tests",
    "tier2: retrieval quality tests",
    "tier3: end-to-end roundtrip tests",
    "tier4: relational quality tests",
    "tier5: agent tool-use tests",
]
